updated index file

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:varun@example.com">varun@example.com</a></p>
+        <p>Email: <a href="mailto:varunvenaganti@gmail.com">varunvenaganti@gmail.com</a></p>
         <p>LinkedIn: <a href="https://linkedin.com/in/varunvenaganti" target="_blank">Varun Venaganti</a></p>
     </section>
 
